--- a/project.env
+++ b/project.env
@@ -1,19 +1,10 @@
-SERVER_NAME=Simple2B_API
-SERVER_HOST=http://127.0.0.1:8001
-SAMPLE_ENV_VAR=Simple2B
-
 JWT_SECRET=__SOME_SALT__
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
 # DATABASE
+MONGO_INITDB_ROOT_USERNAME=user
+MONGO_INITDB_ROOT_PASSWORD=pass
+MONGO_LOCAL_PORT=27017
+DB_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:${MONGO_LOCAL_PORT}/oculo
 
-DATABASE_NAME=db
-DATABASE_USERNAME=postgres
-DATABASE_LOCAL_PORT=5435
-DATABASE_PASSWORD=password
-
-DEV_DATABASE_URI=postgresql://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@localhost:${DATABASE_LOCAL_PORT}/${DATABASE_NAME}
-DB_URI=postgresql://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@localhost:${DATABASE_LOCAL_PORT}/${DATABASE_NAME}
-PROD_DATABASE_URI=postgresql://${DATABASE_USERNAME}:${DATABASE_PASSWORD}@db/${DATABASE_NAME}
-
-
+APP_LOCAL_PORT=8000
