--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "^3.11"
 fastapi = "^0.95.1"
 uvicorn = "^0.22.0"
 pymongo = "^4.3.3"
+email-validator = "^2.0.0.post2"
+python-dotenv = "^1.0.0"
+jose = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
