--- a/project.env
+++ b/project.env
@@ -5,6 +5,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=1440
 MONGO_INITDB_ROOT_USERNAME=user
 MONGO_INITDB_ROOT_PASSWORD=pass
 MONGO_LOCAL_PORT=27017
-DB_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:${MONGO_LOCAL_PORT}/oculo
+MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:${MONGO_LOCAL_PORT}/
+MONGO_DB=oculo
 
 APP_LOCAL_PORT=8000
