--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pymongo = "^4.3.3"
 email-validator = "^2.0.0.post2"
 python-dotenv = "^1.0.0"
 jose = "^1.0.0"
+invoke = "^2.1.1"
+ipython = "^8.13.2"
 
 
 [tool.poetry.group.dev.dependencies]
