--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.0"
 jose = "^1.0.0"
 invoke = "^2.1.1"
 ipython = "^8.13.2"
+passlib = "^1.7.4"
 
 
 [tool.poetry.group.dev.dependencies]
