--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,13 @@
     "aerich",
     "asyncio",
     "bcrypt",
+    "bson",
     "dotenv",
     "fastapi",
     "finalizer",
     "noqa",
     "pydantic",
+    "pymongo",
     "pytest",
     "skipif",
     "sqlalchemy",
