--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,14 +23,14 @@ services:
       ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD:-pass}
       ME_CONFIG_MONGODB_URL: mongodb://${MONGO_INITDB_ROOT_USERNAME:-user}:${MONGO_INITDB_ROOT_PASSWORD:-pass}@mongo:27017/
 
-  # app:
-  #   build: .
-  #   restart: always
-  #   command: bash ./start_server.sh
-  #   environment:
-  #     DB_URI: mongodb://${MONGO_INITDB_ROOT_USERNAME:-user}:${MONGO_INITDB_ROOT_PASSWORD:-pass}@mongo/oculo
-  #   ports:
-  #     - 127.0.0.1:${APP_LOCAL_PORT:-8000}:80
+  app:
+    build: .
+    restart: always
+    command: bash ./start_server.sh
+    environment:
+      DB_URI: mongodb://${MONGO_INITDB_ROOT_USERNAME:-user}:${MONGO_INITDB_ROOT_PASSWORD:-pass}@mongo/oculo
+    ports:
+      - 127.0.0.1:${APP_LOCAL_PORT}:80
 
 
 volumes:
