--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,7 +30,7 @@ services:
     environment:
       DB_URI: mongodb://${MONGO_INITDB_ROOT_USERNAME:-user}:${MONGO_INITDB_ROOT_PASSWORD:-pass}@mongo/oculo
     ports:
-      - 127.0.0.1:${APP_LOCAL_PORT}:80
+      - 127.0.0.1:${APP_LOCAL_PORT:-8070}:80
 
 
 volumes:
