--- a/project.env
+++ b/project.env
@@ -4,6 +4,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=1440
 # DATABASE
 MONGO_INITDB_ROOT_USERNAME=user
 MONGO_INITDB_ROOT_PASSWORD=pass
+MONGO_LOCAL_HOST=mongo
 MONGO_LOCAL_PORT=17017
 MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:${MONGO_LOCAL_PORT}/
 MONGO_DB=oculo
