--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ bcrypt = "^4.0.1"
 python-jose = "^3.3.0"
 python-multipart = "^0.0.6"
 requests = "^2.31.0"
+pytz = "^2023.3"
 
 
 [tool.poetry.group.dev.dependencies]
