--- a/project.env
+++ b/project.env
@@ -1,12 +1,15 @@
-JWT_SECRET=__SOME_SALT__
+ENV_MODE=develop
+JWT_SECRET=__some_secret__
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
 # DATABASE
-MONGO_INITDB_ROOT_USERNAME=user
-MONGO_INITDB_ROOT_PASSWORD=pass
-MONGO_HOST=mongo
-MONGO_PORT=17017
-MONGO_URI=mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@localhost:${MONGO_PORT}/
-MONGO_DB=oculo
+# MONGO_URI=mongodb+srv://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGO_HOST}/
 
-APP_LOCAL_PORT=8070
+APP_LOCAL_PORT=port
+
+BURN_MODEL_URL=https://j31dvzacsg.execute-api.us-east-1.amazonaws.com/oculoai-staging-public-stage/burn-model
+SLEEP_MODEL_URL=https://j31dvzacsg.execute-api.us-east-1.amazonaws.com/oculoai-staging-public-stage/sleep-model
+SLEEP_TARGET_MODEL_URL=https://j31dvzacsg.execute-api.us-east-1.amazonaws.com/oculoai-staging-public-stage/sleep-target-model
+
+BURN_MODEL_URL_LOCAL=http://localhost:9000/2015-03-31/functions/function/invocations
+SLEEP_MODEL_URL_LOCAL=http://localhost:9000/2015-03-31/functions/function/invocations
