--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ python-jose = "^3.3.0"
 python-multipart = "^0.0.6"
 requests = "^2.31.0"
 pytz = "^2023.3"
+boto3 = "^1.26.160"
 
 
 [tool.poetry.group.dev.dependencies]
