fix deprecated warning

--- a/tox.ini
+++ b/tox.ini
@@ -9,3 +9,4 @@ exclude = .git,__pycache__,.venv/
 filterwarnings =
     ignore:.*crypt.* is deprecated:DeprecationWarning
     ignore:.*imp.* is deprecated:DeprecationWarning
+    ignore:.*pkg_resources* is deprecated:DeprecationWarning
