--- a/project.env
+++ b/project.env
@@ -14,9 +14,9 @@ MONGO_URI=mongodb+srv://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWO
 
 APP_LOCAL_PORT=port
 
-BURN_MODEL_URL=https://j31dvzacsg.execute-api.us-east-1.amazonaws.com/oculoai-staging-public-stage/burn-model
-SLEEP_MODEL_URL=https://j31dvzacsg.execute-api.us-east-1.amazonaws.com/oculoai-staging-public-stage/sleep-model
-SLEEP_TARGET_MODEL_URL=https://j31dvzacsg.execute-api.us-east-1.amazonaws.com/oculoai-staging-public-stage/sleep-target-model
+BURN_MODEL_URL=https://...
+SLEEP_MODEL_URL=https://...
+SLEEP_TARGET_MODEL_URL=https://...
 
 BURN_MODEL_URL_LOCAL=http://localhost:9000/2015-03-31/functions/function/invocations
 SLEEP_MODEL_URL_LOCAL=http://localhost:9000/2015-03-31/functions/function/invocations
