--- a/project.env
+++ b/project.env
@@ -7,8 +7,8 @@ ACCESS_TOKEN_EXPIRE_DAYS=60
 MONGO_INITDB_ROOT_USERNAME=username
 MONGO_INITDB_ROOT_PASSWORD=password
 MONGO_HOST=host
-MONGO_PORT=27017
-MONGO_DB=oculo
+MONGO_PORT=port
+MONGO_DB=dbname
 MONGO_URI=mongodb+srv://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@${MONGO_HOST}/
 
 APP_LOCAL_PORT=port
